--- a/basics.html
+++ b/basics.html
@@ -10,7 +10,23 @@
     <h1>Aprendiendo JavaScript</h1>
     <script>
         let hola = "Hello World"
-        console.log(hola)
+        document.write(hola.toUpperCase())
+        console.log("************var-mal***********")
+        var musica = "Pop"
+        console.log(musica)
+        {
+            var musica = "Rock"
+            console.log(musica)
+        }
+        console.log(musica)
+        console.log("************let***********")
+        let musica2 = "Pop"
+        console.log(musica2)
+        {
+            let musica2 = "Rock"
+            console.log(musica)
+        }
+        console.log(musica2)
     </script>
 </body>
 </html>
