--- a/basics/basics9.html
+++ b/basics/basics9.html
@@ -43,6 +43,9 @@
 
         //comprueba si existe el atributo
         console.log(nigell.hasOwnProperty("nombre"))
+
+        //comprueba si existe el atributo
+        console.log(nigell.hasOwnProperty("contacto"))
     </script>
 </body>
 </html>
